// 这个文件是eventloop的请求响应定义

syntax = "proto3";

package evloopio;
option go_package = "service/evloopio";

import "base/base.proto";

// 更改群组成员, 由im-relation调用
message AlterGroupMemberRequest {
  string member_id = 1;
  base.RelationStatus status = 2;
  base.RelationChangeType change_type = 3;
  int64 relation_version = 4; 
}

message AlterGroupMemberResponse {
  enum AlterGroupMemberResponseCode {
    OK = 0;
    GROUP_DISBANDED = 1;
  }

  AlterGroupMemberResponseCode code = 1;
  int64 relation_version = 2;
  int64 current_seq_id = 3;
}

// 订阅群组, 由im-relay调用, 某个人订阅群组, im-relay先确认是否存在这个群(请求im-relation), 然后一致性hash
message SubscribeGroupRequest {
  string user_id = 1;
  string session_id = 2;

  string group_id = 3;
  string gw_advertise_addr_port = 4;
}

message SubscribeGroupResponse {
  enum SubscribeGroupCode {
    OK = 0;
    VERSION_OLD = 1;        // 这个错误, version有效调用方可以等待version更新后重试
    NO_PERMISSION = 2;      // 这个错误, 没有权限, relation_id是有效的
    GROUP_DISBANDED = 3;    // 这个错误, 群组解散, relation_id和max_seq_id是有效的
  }
  SubscribeGroupCode code = 1;
  int64 relation_id = 2;
  int64 max_seq_id = 3;
}

// 发送消息
message SendMessageRequest {
  bytes message_data = 1;
  bool check_idempotent = 2;   // 是否需要检查幂等
  string idempotent_key = 3;  // 幂等key
}

message SendMessageResponse {
  enum SendMessageCode {
    OK = 0;
    VERSION_OLD = 1;        // 这个错误, version有效调用方可以等待version更新后重试
    NO_PERMISSION = 2;      // 这个错误, 没有权限, relation_id是有效的
    GROUP_DISBANDED = 3;    // 这个错误, 群组解散, relation_id和max_seq_id是有效的
  }
  
  SendMessageCode code = 1;
  int64 relation_id = 2;
  int64 max_seq_id = 3;
  int64 message_seq = 4;
}

// 解散群
message DisbandGroupRequest {
  int64 groupId = 1;
}

message DisbandGroupResponse {
}

message UniversalGroupEvloopInput {
  oneof input {
    AlterGroupMemberRequest alter_group_member = 1;
    SubscribeGroupRequest subscribe_group = 2;
    SendMessageRequest send_message = 3;
    DisbandGroupRequest disband_group = 4;
  }
}

message UniversalGroupEvloopOutput {
  oneof output {
    AlterGroupMemberResponse alter_group_member = 1;
    SubscribeGroupResponse subscribe_group = 2;
    SendMessageResponse send_message = 3;
    DisbandGroupResponse disband_group = 4;
  }
}